2004-07-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmain.h: Add gtk_parse_args(). Its public API.  (#147476, 
	Owen Taylor)

	* gtk/gtkcombobox.c (gtk_combo_box_popdown): Don't crash if
	unrealized.

2004-07-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrc.c (_gtk_rc_init): Apply the gtk-default-menu-item-style 
	to cell view menu items as well.  (#147405, John Cupitt)

	* gtk/gtkcombobox.c (gtk_combo_box_menu_key_press): Pop down 
	first. (#147399, John Cupitt)

Sat Jul 10 23:35:13 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentry.c (paste_received): Make middle-button pasting
	work as expected inside the entry.  (#116789, Scott Bronson)

Sat Jul 10 22:19:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextbuffer.c (gtk_text_buffer_select_range): Update 
	clipboards.  (#142805, Mikael Hallendal)

2004-07-10  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version number.

	* === Released 2.4.4 ===

2004-07-09  Federico Mena Quintero  <federico@ximian.com>

	Merged from HEAD:

	Fixes #137031:

	* gtk/gtkfilesystemunix.c (get_fallback_icon): New helper
	function, fetches a stock icon as a fallback.
	(gtk_file_system_unix_volume_render_icon): Fall back to a stock
	icon.
	(gtk_file_system_unix_render_icon): Fall back to a stock icon.
	Use helper functions rather than being a mega-function.
	(get_icon_name_for_directory): Renamed from
	get_icon_for_directory().
	(get_icon_type_from_path): New helper function; code pulled out
	from gtk_file_system_unix_render_icon().
	(get_special_icon): Likewise.
	(get_icon_for_mime_type): Likewise.

2004-07-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktooltips.c (gtk_tooltips_paint_window): Use the 
	requisition of the widget instead of relying on the style
	drawing function to supply the size of the drawable.  (#146531)	

2004-07-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates.

2004-07-09  Matthias Clasen  <mclasen@redhat.com>
	